вынес подключение в бд + добавил view у пользователя + правки
